Add fiPackfile::FindEntryHeaderByPath virtual function reverse and hook

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,7 +25,7 @@ add_library(rageAm SHARED
     "Rage/Streaming.h"
     "Rage/Pool.h" 
     "Rage/pgDictionary.h" 
-    "Rage/grcTexture.h")
+    "Rage/grcTexture.h" "Rage/fwHelpers.h")
 
 # target_include_directories(rageAm PUBLIC "../vendor/imgui-1.88")
 
