--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,43 +1,71 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
+add_library(rageAm SHARED 
+	"main.cpp"
+
+    "Logger.h"
+
+    "imgui_rage/ImGuiConfigRage.h"
+    "imgui_rage/ImGuiImplRage.h"
+    "imgui_rage/ImGuiImplRage.cpp"
+    "imgui_rage/ImGuiRage.h"
+    "imgui_rage/ImGuiRage.cpp"
+    "imgui_rage/ImGuiApp.h" 
+    "imgui_rage/ImGuiAppMgr.h" 
+    "imgui_rage/ImGuiExtensions.h"
+
+    "imgui_rage/sys_apps/ImGuiApp_MainWindow.h"
+
+    "memory/gmAddress.h"
+    "memory/gmAddress.cpp"
+    "memory/gmHook.cpp"
+    "memory/gmHook.h"
+    "memory/gmScanner.cpp"
+    "memory/gmScanner.h"
+    "memory/pattern.h"
+    "memory/pattern.cpp"
+    "memory/gmHelper.h"
+
+    "rage/atArray.h"
+    "rage/CVehicleFactory.h"
+    "rage/datBase.h"
+    "rage/fiDevice.h"
+    "rage/fiPackfile.h"
+    "rage/fiPackfile.cpp"
+    "rage/fiStream.h"
+    "rage/fiStream.cpp"
+    "rage/fragType.h"
+    "rage/fwFragmentDef.h"
+    "rage/fwFsm.h"
+    "rage/fwHelpers.h"
+    "rage/fwTypes.h"
+    "rage/grcTexture.h"
+    "rage/grmShaderGroup.cpp"
+    "rage/grmShaderGroup.h"
+    "rage/pgDictionary.h"
+    "rage/Pool.h"
+    "rage/Streaming.h"
+    "rage/TlsManager.h"
+    "rage/atHashString.h" 
+
+    "rage_hook/grcore/rageRender.h"
+    "rage_hook/grcore/rageDX11.h"
+    "rage_hook/grcore/rageGrc.h" 
+    "rage_hook/rageWin32.h"
+    "rage_hook/rageFileInterface.h"
+    "rage_hook/rageGrm.h" 
+    "rage_hook/rageStreaming.h"
+    "rage_hook/rageFwTimer.h" 
+    "rage_hook/rageControls.h" 
+)
+
 # Boost Libary
 set(BOOST_ROOT $ENV{Boost_ROOT})
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
 find_package(Boost REQUIRED)
-
-# Definde dynamic library
-add_library(rageAm SHARED 
-	"main.cpp" "main.h" 
-    "Memory/Hooking.h" "Memory/Hooking.cpp" 
-    "Logger.h" "Logger.cpp" 
-    "Component.h"
-    "ComponentMgr.h" "ComponentMgr.cpp"
-    "ImGui/imgui_impl_gta.cpp" "ImGui/imgui_impl_gta.h" 
-    "ImGui/ImGuiGta.h" "ImGui/ImGuiGta.cpp" 
-    "GtaCommon.h"
-    "Graphics/GtaDirectX.h" 
-    "Platform/GtaWindow.h" 
-    "Rage/fwFsm.h"
-    "Rage/CVehicleFactory.h"
-    "Rage/Streaming.h"
-    "Rage/Pool.h" 
-    "Rage/pgDictionary.h" 
-    "Rage/grcTexture.h" 
-    "Rage/fwHelpers.h" 
-    "Rage/Files/fiPackfile.cpp" 
-    "Rage/Files/fiStream.h" 
-    "Rage/Files/fiStream.cpp" 
-    "Rage/Files/fiDevice.h" 
-    "Rage/grmShaderGroup.h" 
-    "Rage/atArray.h" 
-    "ImGui/imconfig_gta.h" "Rage/grmShaderGroup.cpp" "Rage/fragments/fragType.h" "Rage/fragments/fwFragmentDef.h")
-
-# target_include_directories(rageAm PUBLIC "../vendor/imgui-1.88")
-
 target_include_directories(rageAm PUBLIC ${Boost_INCLUDE_DIRS})
 
-# Link static libraries
 target_link_libraries(rageAm PUBLIC
     "${CMAKE_SOURCE_DIR}/vendor/minhook-1.3.3/lib/libMinHook-x64-v141-md.lib" 
     # "${CMAKE_SOURCE_DIR}/vendor/scripthook/lib/ScriptHookV.lib" 
@@ -45,9 +73,9 @@ target_link_libraries(rageAm PUBLIC
     "${CMAKE_SOURCE_DIR}/vendor/backtrace/libbacktrace.a" 
     d3d11.lib
     imgui
-    ${Boost_LIBRARIES})
+    ${Boost_LIBRARIES}
+)
 
-# Set latest c++ standard
 set_property(TARGET rageAm PROPERTY CXX_STANDARD 20)
 set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std:c++latest")
 set(CMAKE_CXX20_EXTENSION_COMPILE_OPTION "-std:c++latest")
@@ -57,32 +85,26 @@ add_custom_command(TARGET ${PROJECT_NAME}
     PRE_BUILD
     COMMAND 
     
-    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/injector/rageInjector.exe
-    -e rageAm.dll 
+    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/injector/rageInjector.exe 
+    -fe rageAm.dll 
 )
 
 # Copy to temp directory, otherwise we can't compile DLL because its used by GTA.
 
-# DLL
+# Use robocopy with repeating because sometimes copy fails... 
+# || cmd /c "exit /b 0" bit is for making return code 0 (robocopy returns no 0 as success)
 add_custom_command(TARGET ${PROJECT_NAME}
     POST_BUILD
     COMMAND 
-    ${CMAKE_COMMAND} -E 
-   
-    copy
-    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src/rageAm.dll 
-    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src/temp/rageAm.dll
-)
-
-# PDB
-add_custom_command(TARGET ${PROJECT_NAME}
-    POST_BUILD
-    COMMAND
-    ${CMAKE_COMMAND} -E 
-   
-    copy
-    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src/rageAm.pdb 
-    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src/temp/rageAm.pdb
+    robocopy
+    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src
+    ${CMAKE_SOURCE_DIR}/out/build/${CMAKE_PRESET_NAME}/src/temp
+    rageAm.dll
+    rageAm.pdb
+    /R:5
+    /W:1
+    /is /it
+    || cmd /c "exit /b 0"
 )
 
 OPTION (INJECT_DLL "Inject DLL" ON)
@@ -92,7 +114,7 @@ OPTION (WAIT_FOR_GAME "Wait for game" ON)
 if(INJECT_DLL)
     unset(INJECT_DLL CACHE)
     if(WAIT_FOR_GAME)
-        # Unset it right after so if build can be canceled in any moment
+        # Unset it right after because build can be canceled in any moment
         unset(WAIT_FOR_GAME CACHE)
         add_custom_command(TARGET ${PROJECT_NAME}
             POST_BUILD
@@ -111,3 +133,6 @@ if(INJECT_DLL)
         )
     endif(WAIT_FOR_GAME)
 endif(INJECT_DLL)
+        
+unset(WAIT_FOR_GAME CACHE)
+unset(INJECT_DLL CACHE)
