Small refactor for file observer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,7 +66,7 @@ add_library(rageAm SHARED
     "rage_hook/rageHandlingHacks.h" 
     "rage_hook/rageHandling.h"
 
-    "CrashHandler.h" "rage/fwModelId.h" "rage/CModelInfo.h" "../vendor/imgui-1.89.1/imgui_impl_win32.cpp" "../vendor/imgui-1.89.1/imgui_impl_win32.h" "rage_hook/rageScaleform.h" "imgui_rage/sys_apps/ImGuiApp_Effects.h" "imgui_rage/sys_apps/ImGuiApp_Log.h" "rage_hook/grcore/D3DHelper.h" "rage_hook/file_observer/ShaderSwapThread.h" "rage_hook/grcore/ProgramTypes.h" "memory/gmFunc.h" "rage/grcore/grcEffectMgr.h")
+    "CrashHandler.h" "rage/fwModelId.h" "rage/CModelInfo.h" "../vendor/imgui-1.89.1/imgui_impl_win32.cpp" "../vendor/imgui-1.89.1/imgui_impl_win32.h" "rage_hook/rageScaleform.h" "imgui_rage/sys_apps/ImGuiApp_Effects.h" "imgui_rage/sys_apps/ImGuiApp_Log.h" "rage_hook/grcore/D3DHelper.h" "rage_hook/file_observer/ShaderSwapThreadInterface.h" "rage_hook/grcore/ProgramTypes.h" "memory/gmFunc.h" "rage/grcore/grcEffectMgr.h" "memory/unionCast.h" "rage_hook/file_observer/TextureSwapThreadInterface.h")
 
 # Boost Libary
 set(BOOST_ROOT $ENV{Boost_ROOT})
