--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-latest
     name: CI
     steps:
-      - uses: actions/checkout@v2.4.0
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
 
@@ -35,5 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: binary
-          path: |
-            bin/Release/rageAm.dll
+          path: bin/Release/
