--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,16 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  ci:
+  ci_dll:
     runs-on: windows-latest
-    name: CI
+    name: CI-dll
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
 
       - name: Setup premake
-        uses: abel0b/setup-premake@v2
+        uses: abel0b/setup-premake@v2.3
         with:
           version: "5.0.0-beta2"
 
@@ -34,5 +34,40 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: binary
+          name: binary-dll
           path: bin/Release/
+          
+  ci_standalone:
+    runs-on: windows-latest
+    name: CI-standalone
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Setup premake
+        uses: abel0b/setup-premake@v2.3
+        with:
+          version: "5.0.0-beta2"
+
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.1
+
+      - name: Generate premake5 project
+        run: premake5 --file=main.lua vs2022 --standalone
+        shell: bash
+
+      - name: Build 64bit release DLL
+        run: |
+          msbuild /p:Configuration=Release /p:Platform=x64 rageAm.sln
+        working-directory: projects/
+
+      - name: Check if DLL got built
+        run: if (-Not (Test-Path -path "bin/Release/rageAm.dll")) {throw 1}
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: binary-dll
+          path: bin/Release/
+
