--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   ci_dll:
     runs-on: windows-latest
-    name: CI-dll
+    name: CI-Dll
     steps:
       - uses: actions/checkout@v3
         with:
@@ -39,7 +39,7 @@ jobs:
           
   ci_standalone:
     runs-on: windows-latest
-    name: CI-standalone
+    name: CI-Standalone
     steps:
       - uses: actions/checkout@v3
         with:
@@ -65,6 +65,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: binary-dll
+          name: binary-standalone
           path: bin/Release/rageAm.exe
 
